tests/invalid/invalid_symbol.lang
proc main() void {
    var hello: i32 = a;
}
